feat: add constraints to location